--- a/views/index.hbs
+++ b/views/index.hbs
@@ -66,12 +66,27 @@
                 </div>
                 <div class="slide3">
                     <img src="/images/5edited.jpg" alt="">
+                    <div class="headline2">
+                        <h1>For the future</h1>
+                        <p>We want to make places better for generations to come.</p>
+                        <button class="modal-open" data-modal="modal1" id="sliderButton">Get free quote now &#8658;</button>
+                    </div>
                 </div>
                 <div class="slide3">
                     <img src="/images/1edited.jpg" alt="">
+                    <div class="headline2">
+                        <h1>Quality as priority</h1>
+                        <p>We want to build safely, sustainably and with certainty</p>
+                        <button class="modal-open" data-modal="modal1" id="sliderButton">Get free quote now &#8658;</button>
+                    </div>
                 </div>
                 <div class="slide3">
                     <img src="/images/4edited.jpg" alt="">
+                    <div class="headline2">
+                        <h1>Deliver what is best</h1>
+                        <p>Our priority is to deliver quality work that can sustain years and years and meet our client's goals</p>
+                        <button class="modal-open" data-modal="modal1" id="sliderButton">Get free quote now &#8658;</button>
+                    </div>
                 </div>
     
                 <div class="navigation-auto3">
@@ -150,7 +165,7 @@
         <div class="colTop">
             <img src="/images/support_agent_red.svg">
             <div class="textContent">
-                <h4>Contact Us</h4>
+                <h4>Call/Whatsapp</h4>
                 <p>+60192772060</p>
             </div>
         </div>
@@ -161,6 +176,8 @@
 </header>
 
 <content>
+
+    <div class="topContent">
 
     <div class="mainTitleTopDiv">
         
@@ -270,6 +287,8 @@
                 </div>
             </div>
         </div>
+    </div>
+
     </div>
 
     <div class="business">
@@ -390,7 +409,7 @@
     </div> --}}
 
 
-        <div class="ourVision">
+        {{!-- <div class="ourVision">
 
         <div class="mainTitle">
             <h1>Our vision</h1>
@@ -444,7 +463,7 @@
 
     </div>
 
-    </div>
+    </div> --}}
         
 
     {{!-- <div class="maps">
