--- a/views/index.hbs
+++ b/views/index.hbs
@@ -560,9 +560,9 @@
                     <div class="detail-box">
                         <div class="type">
                             <a href="#">Glass Installation</a>
-                            <span>Full cover</span>
+                            <span>Renovation for building</span>
                         </div>    
-                        <a href="#" class="price">$20</a>
+                        <a href="#" class="price">Feb 2020</a>
                     </div>
                 </div>
             </li>
@@ -575,9 +575,9 @@
                     <div class="detail-box">
                         <div class="type">
                             <a href="#">Glass Installation</a>
-                            <span>Full cover</span>
+                            <span>Renovation for building</span>
                         </div>    
-                        <a href="#" class="price">$20</a>
+                        <a href="#" class="price">Feb 2020</a>
                     </div>
                 </div>
             </li>
@@ -590,9 +590,9 @@
                     <div class="detail-box">
                         <div class="type">
                             <a href="#">Glass Installation</a>
-                            <span>Full cover</span>
+                            <span>Renovation for building</span>
                         </div>    
-                        <a href="#" class="price">$20</a>
+                        <a href="#" class="price">Feb 2020</a>
                     </div>
                 </div>
             </li>
@@ -605,9 +605,9 @@
                     <div class="detail-box">
                         <div class="type">
                             <a href="#">Glass Installation</a>
-                            <span>Full cover</span>
+                            <span>Renovation for building</span>
                         </div>    
-                        <a href="#" class="price">$20</a>
+                        <a href="#" class="price">Feb 2020</a>
                     </div>
                 </div>
             </li>
@@ -620,9 +620,9 @@
                     <div class="detail-box">
                         <div class="type">
                             <a href="#">Glass Installation</a>
-                            <span>Full cover</span>
+                            <span>Renovation for building</span>
                         </div>    
-                        <a href="#" class="price">$20</a>
+                        <a href="#" class="price">Feb 2020</a>
                     </div>
                 </div>
             </li>
@@ -635,9 +635,9 @@
                     <div class="detail-box">
                         <div class="type">
                             <a href="#">Glass Installation</a>
-                            <span>Full cover</span>
+                            <span>Renovation for building</span>
                         </div>    
-                        <a href="#" class="price">$20</a>
+                        <a href="#" class="price">Feb 2020</a>
                     </div>
                 </div>
             </li>
