--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Civil Contractor in Bangi | Renovation, glass installation, civil construction and house building | Buttergun Consortium</title>
+    <title>Insurans untuk semua</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/lightslider.css">
     <script src="/jquery.js"></script>
