Maintenance page edit

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@
     padding:0;
     box-sizing: border-box;
     background-color: black;
-    font-family: IBM plex sans;
+    font-family: 'IBM Plex Sans', sans-serif;
 }
 
 body {
