--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,18 +30,53 @@
             <div class="menu-icon-burger"></div>
         </div>    
     </div>
-    <header>
-        <span class="text1">Kerjaya baru anda</span>
-        <div class="text2">
-            <span class="gradient">bermula</span>
-            <span class="non-gradient">di sini</span>
-        </div>
-    </header>
+    <div class="header-container">
+        <header>
+            <span class="text1">Kerjaya baru anda</span>
+            <div class="text2">
+                <span class="gradient">bermula</span>
+                <span class="non-gradient">di sini</span>
+            </div>
+        </header>
+    </div>
     <content>
         <div class="maintenance">
             <p>Laman sesawang ini masih diselanggara, sila lawati kemudian</p>
         </div>
     </content>
+
+    <section class="container-mentor">
+        <div class="mentor-text">
+            <h1>Kenali mentor anda</h1>
+            <div class="mentor-text-detail">
+                <p>Perjalanan bermula dengan sekecil bata. Cabaran yang ada</p>
+            </div>
+        </div>
+        <div class="mentor-section">
+            <div class="mentor">
+                <div class="mentor-img">
+                    <img src="/images/syahril1.jpg" alt="">
+                </div>
+            </div>
+            <img class="background-img" src="/images/background-office-2.jfif" alt="">
+        </div>
+    </section>
+
+    <div class="outer-wrapper-position">
+        <div class="outer-wrapper">
+            <div class="wrapper">
+                <div class="slide one">Base</div>
+                <div class="slide two">ONE</div>
+                <div class="slide three">TWO</div>
+                <div class="slide four">THREE</div>
+                <div class="slide five">FOUR</div>
+                <div class="slide six">FIVE</div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="/main.js"></script>
 </body>
 
