--- a/views/index.hbs
+++ b/views/index.hbs
@@ -41,7 +41,6 @@
     </div>
     <content>
         <div class="maintenance">
-            <p>Laman sesawang ini masih diselanggara, sila lawati kemudian</p>
         </div>
     </content>
 
@@ -62,17 +61,37 @@
         </div>
     </section>
 
-    <div class="outer-wrapper-position">
-        <div class="outer-wrapper">
-            <div class="wrapper">
-                <div class="slide one">Base</div>
-                <div class="slide two">ONE</div>
-                <div class="slide three">TWO</div>
-                <div class="slide four">THREE</div>
-                <div class="slide five">FOUR</div>
-                <div class="slide six">FIVE</div>
+    <section class="horizontal-section">
+        <div class="sticky-wrapper">
+            <div class="element-wrapper">
+                <div class="element"></div>
+                <div class="element"></div>
+                <div class="element"></div>
+                <div class="element"></div>
+                <div class="element"></div>
             </div>
         </div>
+    </section>
+
+    <section class="container-mentor">
+        <div class="mentor-text">
+            <h1>Kenali mentor anda</h1>
+            <div class="mentor-text-detail">
+                <p>Perjalanan bermula dengan sekecil bata. Cabaran yang ada</p>
+            </div>
+        </div>
+        <div class="mentor-section">
+            <div class="mentor">
+                <div class="mentor-img">
+                    <img src="/images/syahril1.jpg" alt="">
+                </div>
+            </div>
+            <img class="background-img" src="/images/background-office-2.jfif" alt="">
+        </div>
+    </section>
+
+    <div class="footer">
+        <p>Laman sesawang ini masih diselanggara, sila lawati kemudian</p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
